Exercises-part-3/exercise-3.08/manifests/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: sirpacoder/client:v3.03
        imagePullPolicy: Always
        resources:
          requests:
            memory: '64Mi'
            cpu: '250m'
          limits:
            memory: '516Mi'
            cpu: '500m'

---

  apiVersion: v1
  kind: Service
  metadata:
    name: client-svc
    namespace: project
  spec:
    type: NodePort
    selector:
      app: client
    ports:
    - name: client
      port: 80
      protocol: TCP
      targetPort: 3000
      nodePort: 30081
