Exercises-part-3/exercise-3.08/manifests/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: web
  clusterIP: None
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: project
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.0
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: database
              mountPath: /var/lib/postgresql/database
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: database
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 100Mi
