Exercises-part-3/exercise-3.08/manifests/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: sirpacoder/server:v3.03
        imagePullPolicy: Always
        resources:
          requests:
            memory: '32Mi'
            cpu: '200m'
          limits:
            memory: '64Mi'
            cpu: '250m'

---
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - name: server
    port: 80
    protocol: TCP
    targetPort: 3001
